fix: Update Portfolio page to use dynamic CMS data and add Food category

--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -13,5 +13,5 @@ collections:
     slug: "{{year}}-{{month}}-{{day}}-{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
     fields: # The fields for each document, usually in front matter
       - {label: "Title", name: "title", widget: "string"}
-      - {label: "Category", name: "category", widget: "select", options: ["Wedding", "Baby", "Travel", "Fashion", "Product", "Documentary"]}
+      - {label: "Category", name: "category", widget: "select", options: ["Wedding", "Baby", "Travel", "Fashion", "Product", "Food", "Documentary"]}
       - {label: "Image", name: "image", widget: "image"}
