feat: Add Blog CMS integration with dynamic fetching and sample post

--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -16,3 +16,15 @@ collections:
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Category", name: "category", widget: "select", options: ["Wedding", "Baby", "Travel", "Fashion", "Product", "Food", "Documentary"]}
       - {label: "Image", name: "image", widget: "image"}
+
+  - name: "blog"
+    label: "Blog Posts"
+    folder: "src/content/blog"
+    create: true
+    slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
+    fields:
+      - {label: "Title", name: "title", widget: "string"}
+      - {label: "Publish Date", name: "date", widget: "datetime"}
+      - {label: "Category", name: "category", widget: "string"}
+      - {label: "Thumbnail", name: "thumbnail", widget: "image", required: false}
+      - {label: "Body", name: "body", widget: "markdown"}
